# coro

./: .clang-format  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: tests.yml
include/coro/: all.hpp  allocator.hpp  awaitable.hpp  coro.hpp  executor.hpp  executor.inl.hpp  expected.hpp  latch.hpp  mutex.hpp  pipe.hpp  promise.hpp  promise.inl.hpp  serial_executor.hpp  sleep.hpp  stop_token.hpp  task.hpp  timeout.hpp  utils.hpp  web.hpp
include/coro/core/: awaitable.hpp  callback.hpp  executor.hpp  executor.inl.hpp  expected.hpp  handle.hpp  handle.inl.hpp  promise.hpp  promise.inl.hpp  promise_base.hpp  stop.hpp  stop_token.hpp  task.fwd.hpp  task.hpp  task_context.hpp  traits.hpp
include/coro/detail/: containers.hpp  latch.hpp  mutex.hpp  sleep.hpp  stack.hpp  utils.hpp
include/coro/emscripten/: abort.hpp  bridge.hpp  coro_library.cpp  coro_library.js  dlopen.hpp  executor.hpp  js_promise.hpp  sleep.hpp
include/coro/executors/: serial_executor.hpp
include/coro/helpers/: all.hpp  task_or_value.hpp  timeout.hpp
include/coro/sync/: latch.hpp  mutex.hpp  pipe.hpp
tests/: CMakeLists.txt  coro_all.cpp  latch.cpp  lifetime.cpp  mutex.cpp  simple.cpp  stop.cpp  timeout.cpp
tests/linux/: CMakeLists.txt  coro_all.cpp  cross.cpp  latch.cpp  lifetime.cpp  mutex.cpp  pipe.cpp  simple.cpp  stop.cpp  timeout.cpp
tests/wasm/: .gitignore  CMakeLists.txt  bindings.cpp  package-lock.json  package.json  setup.js
tests/wasm/tests/: simple.test.js
